app: Allow overriding PSA_API_TEST_TARGET via Cmake
To allow more flexibility in psa-arch-tests wrt platform naming

Signed-off-by: Øyvind Rønningstad <oyvind.ronningstad@nordicsemi.no>
Change-Id: I281f88fe45e1219a18286f7a7b525ad63f6be6b6

--- a/tf-m-tests/app/CMakeLists.txt
+++ b/tf-m-tests/app/CMakeLists.txt
@@ -21,7 +21,9 @@ endif()
 if(TEST_PSA_API)
     set(SUITE ${TEST_PSA_API})
 
-    string(REGEX REPLACE ".*/" "" PSA_API_TEST_TARGET ${TFM_PLATFORM})
+    if (NOT PSA_API_TEST_TARGET)
+        string(REGEX REPLACE ".*/" "" PSA_API_TEST_TARGET ${TFM_PLATFORM})
+    endif()
 
     if (NOT "${TEST_PSA_API}" STREQUAL "IPC")
         set(TARGET tgt_dev_apis_tfm_${PSA_API_TEST_TARGET})
