app: Add a static library for the PSA tests
This allows external build systems (like Zephyr) to easily pick up and
build the PSA tests in their own context.

Signed-off-by: Øyvind Rønningstad <oyvind.ronningstad@nordicsemi.no>

--- a/tf-m-tests/app/CMakeLists.txt
+++ b/tf-m-tests/app/CMakeLists.txt
@@ -89,12 +89,42 @@ target_compile_definitions(tfm_ns_integration_test
 
 ############################# TFM NS app #######################################
 
+if (TEST_PSA_API)
+    add_library(tfm_ns_psa_test STATIC)
+
+    target_sources(tfm_ns_psa_test
+        PRIVATE
+            psa_api_test.c
+            $<TARGET_OBJECTS:test_combine>
+            $<TARGET_OBJECTS:val_nspe>
+            $<TARGET_OBJECTS:pal_nspe>
+    )
+
+    target_link_libraries(tfm_ns_psa_test
+        PUBLIC
+            platform_ns
+            #val_nspe
+            #pal_nspe
+            #test_combine
+            psa_api_ns
+    )
+
+    target_include_directories(tfm_ns_psa_test
+        PUBLIC
+            .
+    )
+
+    target_compile_definitions(tfm_ns_psa_test
+        PUBLIC
+        PSA_API_TEST_NS
+    )
+endif()
+
 add_executable(tfm_ns)
 
 target_sources(tfm_ns
     PRIVATE
         main_ns.c
-        $<$<BOOL:${TEST_PSA_API}>:psa_api_test.c>
 )
 
 target_link_libraries(tfm_ns
@@ -102,9 +132,7 @@ target_link_libraries(tfm_ns
         platform_ns
         CMSIS_5_tfm_ns
         $<$<OR:$<BOOL:${TEST_NS}>,$<BOOL:${TEST_S}>>:tfm_ns_integration_test>
-        $<$<BOOL:${TEST_PSA_API}>:val_nspe>
-        $<$<BOOL:${TEST_PSA_API}>:pal_nspe>
-        $<$<BOOL:${TEST_PSA_API}>:test_combine>
+        $<$<BOOL:${TEST_PSA_API}>:tfm_ns_psa_test>
         $<$<NOT:$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>>:tfm_s_veneers>
         psa_api_ns
 )
