Build: Disable SHALLOW fetch for psa_arch_test
SHALLOW fetch won't work if GIT_TAG points to a commit ID instead
of a branch or tag. Disable SHALLOW fetch to make commit fetch work.

Change-Id: Iecd2419c60e8566165ba598c50cf311fd4fffce8
Signed-off-by: Ken Liu <Ken.Liu@arm.com>

--- a/lib/ext/psa_arch_tests/CMakeLists.txt
+++ b/lib/ext/psa_arch_tests/CMakeLists.txt
@@ -21,7 +21,7 @@ if ("${PSA_ARCH_TESTS_PATH}" STREQUAL "DOWNLOAD")
         FetchContent_Declare(psa_arch_tests
             GIT_REPOSITORY https://github.com/ARM-software/psa-arch-tests.git
             GIT_TAG ${PSA_ARCH_TESTS_VERSION}
-            GIT_SHALLOW TRUE
+            GIT_SHALLOW FALSE
             GIT_PROGRESS TRUE
             GIT_SUBMODULES ""
             PATCH_COMMAND ${GIT_EXECUTABLE} apply ${PATCH_FILES}
@@ -30,7 +30,7 @@ if ("${PSA_ARCH_TESTS_PATH}" STREQUAL "DOWNLOAD")
         FetchContent_Declare(psa_arch_tests
             GIT_REPOSITORY https://github.com/ARM-software/psa-arch-tests.git
             GIT_TAG ${PSA_ARCH_TESTS_VERSION}
-            GIT_SHALLOW TRUE
+            GIT_SHALLOW FALSE
             GIT_PROGRESS TRUE
             GIT_SUBMODULES ""
         )
