--- a/tf-m-tests/test/test_services/tfm_secure_client_service/CMakeLists.txt
+++ b/tf-m-tests/test/test_services/tfm_secure_client_service/CMakeLists.txt
@@ -17,6 +17,8 @@ target_sources(tfm_partition_secure_client_service
 target_include_directories(tfm_partition_secure_client_service
     PUBLIC
         .
+    PRIVATE
+        ${CMAKE_BINARY_DIR}/generated/test_services/tfm_secure_client_service
 )
 
 target_link_libraries(tfm_partition_secure_client_service
@@ -33,7 +35,7 @@ target_link_libraries(tfm_spm
         tfm_partition_secure_client_service
 )
 
-############################ Secure API ########################################
+############################ NS API ############################################
 
 target_sources(psa_api_ns
     PRIVATE
