--- a/tf-m-tests/test/suites/core/CMakeLists.txt
+++ b/tf-m-tests/test/suites/core/CMakeLists.txt
@@ -26,6 +26,8 @@ target_include_directories(tfm_test_suite_core_ns
 target_compile_definitions(tfm_test_suite_core_ns
     PRIVATE
         DOMAIN_NS=1
+        $<$<BOOL:${TFM_IRQ_TEST}>:TFM_ENABLE_IRQ_TEST>
+        $<$<BOOL:${TFM_INTERACTIVE_TEST}>:CORE_TEST_INTERACTIVE>
 )
 
 target_link_libraries(tfm_test_suite_core_ns
@@ -35,6 +37,7 @@ target_link_libraries(tfm_test_suite_core_ns
         tfm_ns_integration_test
         CMSIS_5_tfm_ns
         tfm_partition_defs
+        platform_ns
 )
 
 
