--- a/tf-m-tests/test/suites/ipc/CMakeLists.txt
+++ b/tf-m-tests/test/suites/ipc/CMakeLists.txt
@@ -42,22 +42,24 @@ target_link_libraries(tfm_ns_tests
 
 ####################### Secure #################################################
 
-target_sources(tfm_test_suite_ipc_s
-    PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/secure/ipc_s_interface_testsuite.c
-)
+if (TEST_S)
+    target_sources(tfm_test_suite_ipc_s
+        PRIVATE
+            ${CMAKE_CURRENT_SOURCE_DIR}/secure/ipc_s_interface_testsuite.c
+    )
 
-target_include_directories(tfm_test_suite_ipc_s
-    PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/secure
-)
+    target_include_directories(tfm_test_suite_ipc_s
+        PUBLIC
+            ${CMAKE_CURRENT_SOURCE_DIR}/secure
+    )
 
-target_link_libraries(tfm_test_suite_ipc_s
-    PRIVATE
-        tfm_test_framework
-)
+    target_link_libraries(tfm_test_suite_ipc_s
+        PRIVATE
+            tfm_test_framework
+    )
 
-target_link_libraries(tfm_s_tests
-    INTERFACE
-        tfm_test_suite_ipc_s
-)
+    target_link_libraries(tfm_s_tests
+        INTERFACE
+            tfm_test_suite_ipc_s
+    )
+endif()
