--- a/tf-m-tests/test/test_services/tfm_core_test_2/CMakeLists.txt
+++ b/tf-m-tests/test/test_services/tfm_core_test_2/CMakeLists.txt
@@ -16,6 +16,8 @@ target_sources(tfm_partition_core_test_2
 target_include_directories(tfm_partition_core_test_2
     PUBLIC
         .
+    PRIVATE
+        ${CMAKE_BINARY_DIR}/generated/test_services/tfm_core_test_2
 )
 
 target_link_libraries(tfm_partition_core_test_2
