Build: Fix SPRTL static library name
Library name of SPRTL has changed to libtfm_sprt.a, fix
the pattern typo in isolation level3 loader files.

Change-Id: I2693fe28b0f38eb8dd39fbaecc271f162e27af6a
Signed-off-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/platform/ext/common/armclang/tfm_isolation_l3.sct.template
+++ b/platform/ext/common/armclang/tfm_isolation_l3.sct.template
@@ -100,7 +100,7 @@ LR_CODE S_CODE_START {
         device_definition.o (+RO)
         *(SFN)
         *armlib* (+RO)
-        *libtfmsprt.a (+RO)
+        *libtfm_sprt.a (+RO)
         *psa_client.* (+RO)
         *psa_service.* (+RO)
         *psa_lifecycle.* (+RO)
