SPRTL: Add log level support for Secure partition
Add log level control for SP. Set the default SP log level as INFO
level.

Change-Id: I9aeaffdf0445fef8878a85ba4b678aba5762887a
Signed-off-by: Shawn Shan <Shawn.Shan@arm.com>

--- a/secure_fw/partitions/lib/sprt/CMakeLists.txt
+++ b/secure_fw/partitions/lib/sprt/CMakeLists.txt
@@ -31,3 +31,8 @@ target_link_libraries(tfm_sprt
     tfm_boot_status
     tfm_secure_api
 )
+
+target_compile_definitions(tfm_partition_defs
+    INTERFACE
+        TFM_PARTITION_LOG_LEVEL=${TFM_PARTITION_LOG_LEVEL}
+)
