Build: Fix image signing if only S side is built
If there is no NS side to be built the S side signed binary added to
the make targets.
In addition in case of NS build if MCUBOOT_IMAGE_NUMBER is equal to 1
NS signed binary is not created, as it is not needed in such a
situation.

Change-Id: I1125402aaad273946f353ed71558aafa84a9a820
Signed-off-by: Mark Horvath <mark.horvath@arm.com>

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -173,7 +173,6 @@ endif()
 
 if(NS)
     add_custom_target(tfm_s_ns_signed_bin
-        ALL
         SOURCES tfm_s_ns_signed.bin
     )
     if (MCUBOOT_IMAGE_NUMBER GREATER 1)
@@ -221,5 +220,5 @@ endif()
 
 add_custom_target(signed_images
     ALL
-    DEPENDS $<$<BOOL:${NS}>:tfm_s_ns_signed_bin>
+    DEPENDS $<IF:$<BOOL:${NS}>,tfm_s_ns_signed_bin,tfm_s_signed_bin>
 )
