--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,16 @@ else()
     include(platform/ext/target/${TFM_PLATFORM}/preload.cmake)
 endif()
 
+if(TFM_SYSTEM_FP)
+    message(FATAL_ERROR "Hardware FPU is currently not supported in TF-M")
+endif()
+if(TFM_SYSTEM_MVE)
+    message(FATAL_ERROR "Hardware MVE is currently not supported in TF-M")
+endif()
+if(TFM_SYSTEM_DSP)
+    message(FATAL_ERROR "Hardware DSP is currently not supported in TF-M")
+endif()
+
 include(config/set_config.cmake)
 
 if(NOT ${CMAKE_GENERATOR} STREQUAL "Unix Makefiles" AND
