Platform: Adjust HAL API to fit for FI hardening
The FI hardening code requires to have a special return type of the
protected functions: fih_int. Modify critical HAL and memory isolation
APIs to use this return type when TFM_FIH_PROFILE is enabled.

Signed-off-by: Tamas Ban <tamas.ban@arm.com>
Co-authorized-by: David Hu <david.hu@arm.com>
Change-Id: I592bf3b365354f04f37eff5fad20bdefaa5b8978

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -56,6 +56,7 @@ target_sources(platform_s
 target_link_libraries(platform_s
     PUBLIC
         platform_region_defs
+        tfm_fih
     PRIVATE
         psa_interface
         tfm_secure_api
